# whispering

./: .gitignore  CLAUDE.md  Makefile  README.md  index.html  package-lock.json  package.json
.cargo/: config.toml
docs/plans/: 2026-04-11-whispering-design.md
scripts/: build_dmg.sh  generate_app_icon.py  install-linux-app.sh  install-model.ps1  install-model.sh  install-windows-app.ps1
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  inject.rs  lib.rs  main.rs  permissions.rs  settings.rs  sounds.rs  status.rs  transcribe.rs  transcripts.rs
src-tauri/src/platform/: mod.rs  runtime.rs
src-tauri/src/platform/linux/: mod.rs
src-tauri/src/platform/macos/: mod.rs
src-tauri/src/platform/windows/: mod.rs
src-tauri/tests/: startup_probe.rs
tasks/: todo.md
