[package]
name = "whispering"
version = "0.1.0"
description = "macOS menu bar speech-to-text via whisper.cpp"
authors = ["davidalecrim1"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "whispering_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "image-ico", "image-png", "macos-private-api"] }
tauri-plugin-log = "2"
global-hotkey = "0.7.0"
cpal = "0.17.3"
whisper-rs = { version = "0.16.0", features = ["metal"] }
enigo = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
log = "0.4"
anyhow = "1.0"
dirs-next = "2.0"
